# mast3r-splam

./: .gitignore  LICENSE  README.md  pyproject.toml
dev/: PIPELINE_README.md  cam_pose_keyframes_shuttle.py  convert_to_pinhole.py  crop_images_uniform.py  downsample_img.sh  estimate_intrinsics.py  jpeg2png.py  mslam_ply_to_points3d.py  notes.txt  run_pipeline.py  slam_splat_config.yaml
dev/m-splam/: PIPELINE_README.md  cam_pose_keyframes_shuttle.py  mslam_ply_to_points3d.py  notes.txt  shuttle_intrinsics.py  slam_splat_config.yaml  train_splat.py
dev/m-splam/scratch/: distortion_analysis.md  download_sweet.py  mslam2colmap.sh  remove_prefix.py  visualize_slam_rerun.py
dev/mapanything/: notes.txt
dev/scratch/: download_sweet.py  estimate_intrinsics.sh  mslam2colmap.py  rename_images.py  shuttle_intrinsics.py  visualize_distortion.py
scratch/: cam_pose_keyframes_shuttle.py  convert_to_pinhole.py  jpeg2png.py  mslam2colmap_notes.txt  notes.txt  zero_distortion.py
scratch/scratch/: debug_images_bin  debug_images_bin.cpp  mslam_inspect.py  verify_colmap_bins.py
