[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "open3d>=0.19.0",
    "plyfile>=1.1",
    "pycolmap>=3.12.6",
    "rerun-sdk>=0.26.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "wildflow>=0.1.4",
    "huggingface-hub",
]
